# fraude_ai

./: .env  .gitignore  build.sh  data_generator.py  docker-compose.yml  fraud_detection_architecture.md  graph_fraud_detection.py  llm_exploration.md  mongodb_schema.py  policy_engine.py  pytest.ini  sample_data.json
common/: build.sh  config.py  mongodb_utils.py  pyproject.toml
common/common/: config.py  models.py  mongodb_utils.py
dashboard/: Dockerfile  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/dashboard/: main.py  test_main.py
graph_service/: Dockerfile  README.md  build.sh  main.py  pyproject.toml
graph_service/graph_service/: api_router.py  main.py  models.py  services.py
graph_service/graph_service/routers/: cluster_router.py  link_router.py
graph_service/graph_service/services/: __init__.py  cluster_service.py  graph_rule_service.py  link_service.py  transaction_service.py  user_service.py
graph_service/tests/: conftest.py  test_cluster_api.py  test_graph_functionality.py  test_graph_rule_api.py  test_link_api.py  test_main.py  test_user_api.py
llm_interface/: Dockerfile  README.md  api.py  build.sh  docker-compose.yml  llm_core.py  main.py  pyproject.toml
llm_interface/llm_interface/: main.py
neural_net_service/: Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
neural_net_service/neural_net_service/: main.py
neural_net_service/tests/: conftest.py  test_main.py
orchestrator/: Dockerfile  build.sh  docker-compose.yml  main.py  pyproject.toml
orchestrator/orchestrator/: main.py
orchestrator/tests/: test_main.py
rules_policy_engine/: Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml
rules_policy_engine/rules_policy_engine/: api.py  conftest.py  main.py  models.py  services.py  test_api.py  test_transactions.py  tests.py
