[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
common = {path = "../common/dist/common-0.1.0.tar.gz"}
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
