[tool.poetry]
name = "graph_service"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
networkx = "^3.4.2"
pymongo = "^4.12.0"
pytest = "^8.2.2"
mongomock = "^4.1.0"
common = {path = "../common/dist/common-0.1.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
