[tool.poetry]
name = "llm_interface"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.115.12", source = "aliyun"}
uvicorn = {version = "^0.34.2", source = "aliyun"}
pymongo = {version = "^4.12.0", source = "aliyun"}
transformers = {version = "^4.51.3", source = "aliyun"}
langchain = {version = "^0.3.23", source = "aliyun"}
httpx = {version = "^0.28.1", source = "aliyun"}
common = {path = "../common/dist/common-0.1.0.tar.gz"}


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
