[tool.poetry]
name = "neural_net_service"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
common = {path = "../common/dist/common-0.1.0.tar.gz"}
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
