[tool.poetry]
name = "neural_net_service"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.111.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.7"
torch = "^2.3.0"
mongomock = "^4.1.0"
common = {path = "../common/dist/common-0.1.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mongomock = "^4.3.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
