[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["Hendri Karisma <situkangsayur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pymongo = "^4.12.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
